testsuite/tests/parser/should_fail/RecordDotSyntaxFail4.stderr
RecordDotSyntaxFail4.hs:7:29: error:
    parse error on input ‘.’
